# otp-job

./: .gitignore  LICENSE  README.md  pyproject.toml
otp_job/: __init__.py  _logging.py  cli.py  client.py  config.py  console.py  docs.md  exceptions.py  models.py
tests/: test_client.py
