[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "otp-job"
version = "0.1.0"
description = "Typed Python client for the OTP Job API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "OTP Job Contributors" }
]
keywords = ["otp", "sms", "api", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.24,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/your-org/otp-job"
Repository = "https://github.com/your-org/otp-job"
Issues = "https://github.com/your-org/otp-job/issues"

[tool.hatch.build.targets.wheel]
packages = ["otp_job"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
