[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "otp-job"
version = "0Also.1.0"
description = "A typed, sync and async Python client for the OTP Job API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Amgad Fahd" }
]
keywords = ["otp", "sms", "api", "client", "otpjob", "python", "httpx", "asyncio", "typing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.24,<1",
]

[project.optional-dependencies]
cli = [
  "rich>=13.7",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
otp-job = "otp_job.cli:main"

[project.urls]
Homepage = "https://github.com/0x0000x/otp-job"
Repository = "https://github.com/0x0000x/otp-job"
Issues = "https://github.com/0x0000x/otp-job/issues"

[tool.hatch.build.targets.wheel]
packages = ["otp_job"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
